src/objects/LnP_BackgroundSection__c.object
<CustomObject>
    <fields>
        <fullName>Application_BG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application_BG</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>LnP_BackgroundSections</relationshipLabel>
        <relationshipName>LnP_BackgroundSections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Address_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>City</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Person Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_of_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>County_New_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Course Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DegreeEarned__c</fullName>
        <label>DegreeEarned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Degree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Duties__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description of Duties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Program__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Education Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Educational_Institution_Name__c</fullName>
        <formula>Educational_Institution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Educational Institution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Educational_Institution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Educational Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Approval_Expiry_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exam Approval Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Pass_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exam Pass Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Result_Expiry_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exam Result Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <label>Exam Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exam_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Bg2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This a duplicate lookup created explicitly to get duplicate Related lists.</description>
        <label>License Bg2</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Qualifying Experience</relationshipLabel>
        <relationshipName>LnP_BackgroundSections_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Bg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Bg</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Qualifying Information</relationshipLabel>
        <relationshipName>LnP_BackgroundSections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Major</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Minor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Hours__c</fullName>
        <label>Monthly Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Course__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Course</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Institution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Institution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Permit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Position Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Reinstatement_Application__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Reinstatement Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal &amp; Reinstatement Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>LnP_BackgroundSections</relationshipLabel>
        <relationshipName>LnP_BackgroundSections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>LnP_BackgroundSections</relationshipLabel>
        <relationshipName>LnP_BackgroundSections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reschedule_Possible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reschedule Possible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_Provider_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>School/Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_Job_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supervisor Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supervisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Supervisor Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trainer_License__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trainer License</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>LnP_BackgroundSection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LnP_BackgroundSection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LnP_BackgroundSections</pluralLabel>
    <recordTypes>
        <fullName>Continuing_Education</fullName>
        <active>true</active>
        <label>Continuing Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qualifying_Education</fullName>
        <active>true</active>
        <label>Qualifying Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qualifying_Experience</fullName>
        <active>true</active>
        <label>Qualifying Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qualifying_Training</fullName>
        <active>true</active>
        <label>Qualifying Training</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>date</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Start_Date__c )</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Add Date</errorMessage>
    </validationRules>
</CustomObject>